[package]
name = "nametbd"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.16"
ndarray-rand = "0.15"
rand = "0.8"

[[example]]
name = "simple_example"
path = "examples/simple_example.rs"

[[example]]
name = "linear_regression_example"
path = "examples/linear_regression_example.rs"

[[example]]
name = "logistic_regression_example"
path = "examples/logistic_regression_example.rs"

[[example]]
name = "regularized_regression_example"
path = "examples/regularized_regression_example.rs"

[[example]]
name = "svm_example"
path = "examples/svm_example.rs"

[[example]]
name = "dimensionality_reduction_example"
path = "examples/dimensionality_reduction_example.rs"

[[example]]
name = "clustering_example"
path = "examples/clustering_example.rs"
